New Changes: Up to passing data from server to client after sending info to server from client

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,11 @@
 <head>
-  <title>Todo List</title>
+  <title>Assignment 4</title>
 </head>
 
 <body>
-  <div id="render-target"></div>
+    <div id="render-target"></div>
+    <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 </body>
+
+
+
