--- a/client/main.html
+++ b/client/main.html
@@ -20,6 +20,11 @@
         <area target="" alt="Room5" title="Room5" href="" coords="272,192,326,282" shape="rect">
         <area target="" alt="Room6" title="Room6" href="" coords="338,192,391,284" shape="rect">
     </map>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <div id="render-target"></div>
 
 </body>
